# pdf2md

./: .gitignore  CHANGELOG.md  DIARIO.md  LICENSE  README.md  README_PYPI.md  ROADMAP.md  pyproject.toml
corpus/: RIGHTS.md  registry.py
corpus/_canonical/: MANIFEST.md
corpus/_gt/: README.md  _TEMPLATE_note.md  _prefill.py
corpus/_gt/arxiv_1706_03762/: README.md  pg03.expected.md.draft
corpus/_gt/arxiv_2106_05919v2/: README.md  pg30.expected.md.draft
corpus/_gt/cdc_mmwr_73_35_a1/: README.md  pg01.expected.md.draft
corpus/_sources/: MANIFEST.md
corpus/examples/: README.md  _build_examples.py
corpus/examples/sintetico/: README.md  gen.py  manifest.json
docs/: ANALISE_CRITICA.md  ARQUITETURA.md  CLAUDE_MEMORY.md  LAB_PROTOCOL.md  LICENSING.md  LITERATURA.md  LITERATURA_v2.md  MD_CANONICAL.md  META_TRANSMUTOS.md  METRICS.md  PDFS_SUJOS_CANDIDATOS.md  PHILOSOPHY.md  README.md  TECNOLOGIAS.md
docs/arquitetura/: 01_extracao.md  02_otimizacao.md  03_reconstrucao.md  04_metricas.md  05_pipeline.md
docs/biblioteca/: INDEX.md  benchmarks.md  ferramentas.md  glossario.md  metricas.md  papers.md
docs/explanation/: analise_critica.md  arquitetura.md  avaliacao.md  diario.md  literatura.md  philosophy.md  transmutos.md
docs/explanation/arquitetura/: 01_extracao.md  02_otimizacao.md  03_reconstrucao.md  04_metricas.md  05_pipeline.md
docs/how-to/: criar_novo_lab.md  escolher_intent.md  instalar_do_fonte.md
docs/profiles/: README.md  _schema.yaml
docs/profiles/ativo/: gemma3-4b-small-image.yaml  marker.yaml  medidores.yaml  pdf2md-optimize.yaml  pdftotext.yaml  pix2tex.yaml  qwen3-vl-8b-small-image.yaml
docs/profiles/descartado/: gemma3-12b-full-page.yaml  llama3-2-vision-11b.yaml  marker-use-llm-llama32-combo.yaml
docs/profiles/inferido/: mineru-2-5-pro.yaml  nougat.yaml  olmocr-2.yaml  pdftotext.yaml
docs/reference/: cli.md  md_canonical.md  metricas.md  panorama_extractores_ocr.md  tecnologias.md
docs/reference/biblioteca/: INDEX.md  ferramentas.md  metricas.md  papers.md
docs/reference/corpus/: licensing.md  manifest_canonical.md  (+1 more)
src/: aggregate_stats.py  gen_pdfs.py  multi_roundtrip.py  optimize_images.py  restructure.py  roundtrip.py  stats.py
src/pdf2md/: __init__.py  _pix2tex_runner.py  _profiles.py  aggregate.py  cli.py  discovery.py  executor.py  extractors.py  formula_cropper.py  multi_roundtrip.py  normalize.py  optimize.py  pdfs.py  pixel_roundtrip.py  provenance.py  restructure.py  roundtrip.py  routing.py  stats.py  table_teds.py  telemetry.py
tests/: test_aggregate.py  test_cli_smoke.py  test_executor.py  test_extractors.py  test_formula_cropper.py  test_multi_roundtrip.py  test_normalize.py  test_optimize.py  test_pdfs.py  test_pixel_roundtrip.py  test_provenance.py  test_restructure.py  test_roundtrip.py  test_routing.py  test_stats.py  test_table_teds.py  test_telemetry.py
tickets/: INDEX.md  README.md
tickets/closed/: T013_mover_scripts_conversor.md  T020_estrutura_lab_e_protocolo.md  T021_manifest_sources_read_only.md  T022_cache_corpus_em_z.md  T023_convencao_venv_por_experimento.md  T024_reorganizacao_tickets_em_faixas.md  T030_revisao_literatura.md  T031_definicao_de_metricas.md  T040_corpus_canonico_inicial.md  T050_baseline_marker_reproduzivel.md  T065_corpus_gt_sintetico.md  T071_bloat_ratio_alucinacao_heuristica.md  T075_tabelas_teds.md  T076_md_to_pdf_overwrite_silencioso.md  T085_telemetry_module.md  T090_macro_intent_routing.md  T092_indexacao_utility_proxies.md  T101_marker_pdf_extraction_com_gpu_rtx_3060.md  T102_restructure_output_por_capitulo_indexmd.md  T103_round_trip_test_script.md  T104_round_trip_test_em_1_capitulo_baseline.md  T105_substituir_extracao_antiga_eliminar_v2_anti_padra.md  T106_extra_extraction_study.md  T107_md_to_pdf_per_chapter.md  T108_pacote_conversor_readme.md  T131_classificador_e_compressao_imagens_nc.md  T136_breakdown_formato_stats.md  T190_mermaid_render_md2pdf.md  T430_corpus_livre_para_testes_urls_licencas.md  T450_investigar_ibm_lesson_1_round_trip_critico.md
tickets/in_progress/: T040_corpus_canonico_inicial.md  T050_baseline_marker_reproduzivel.md
tickets/open/: T031_definicao_de_metricas.md  T050_baseline_marker_reproduzivel.md  T060_mini_corpus_gt_humano.md  T065_corpus_gt_sintetico.md  T075_tabelas_teds.md  T076_md_to_pdf_overwrite_silencioso.md  T092_indexacao_utility_proxies.md  T107_md_to_pdf_per_chapter.md  T108_pacote_conversor_readme.md  T136_breakdown_formato_stats.md  T180_reconstrucao_vetorial_imagens.md  T190_mermaid_render_md2pdf.md  T192_cropper_robustez_tipografia.md  T193_pass2_densidade_sparse_saudavel.md  T195_roundtrip_prova_fidelidade.md  T401_documentar_hierarquia_de_prioridades.md  T430_corpus_livre_para_testes_urls_licencas.md  T450_investigar_ibm_lesson_1_round_trip_critico.md
tickets/research/: T070_pixel_roundtrip_validador_visual.md  T072_calibracao_reconstrutor.md  T085_telemetry_module.md  T090_macro_intent_routing.md  T100_roadmap_conversor_pdf_md_bidirecional.md  T130_image_optimization.md  T132_potrace_svg_line_art.md  T133_detector_de_formula.md  T134_pix2tex_formulas.md  T135_ssim_gate_qualidade.md  T137_denoising_jpeg_pre_compressao.md  T160_ocr_semantico_generalizado.md  T180_reconstrucao_vetorial_imagens.md  T191_diagram_to_mermaid_vlm.md  T194_programa_comparativo_cientifico.md  T400_conversor_projeto_autonomo.md  T402_pipeline_fractal_recursivo.md  T410_testar_ferramentas_alternativas_nougat_mineru_pdftotext.md  T420_fallback_low_resource_sem_gpu_sem_modelos_ml_pesados.md  T440_md_como_formato_de_transporte_vs_pdf.md  T451_slides_pptx_como_categoria_problematica.md
(+76 files in other folders)
