[project]
name = "pdf2md"
version = "0.6.0"
description = "Conversor PDF↔MD com round-trip mensurável e otimização adaptativa de imagens"
authors = [
    { name = "Leonardo Marques de Souza", email = "leonardo.marques.souza@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# Deps base do CLI. Marker/pandoc/Chrome são checados em runtime via `pdf2md doctor`,
# não declarados aqui (cada um vive no seu venv ou no PATH, sem conflito pillow<11).
dependencies = [
    "typer>=0.12",
    "pymupdf>=1.24",
    "pillow>=10",
    "psutil>=5.9",
    "numpy>=1.26",
    "scipy>=1.14",
    "scikit-image>=0.22",
]

[project.scripts]
pdf2md = "pdf2md.cli:app"

[project.urls]
Repository = "https://github.com/leonardomdesouza/pdf2md"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdf2md*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# pytest é exceção — não tem env var oficial; explicitamos
cache_dir = "Z:\\caches\\pytest"

[dependency-groups]
dev = [
    "pip>=26.1.1",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
    "pytest>=8",
]
