[project]
# Nome de DISTRIBUIÇÃO no PyPI. O slug "pdf2md" estava reservado por outra conta
# (registrado sem releases), então o pacote publica como "pdftomd". O nome de
# import (pdf2md) e o comando CLI (pdf2md) permanecem inalterados.
name = "pdftomd"
version = "0.8.0"
description = "Conversor PDF→MD CPU-first: roteamento por intent (rápido/qualidade), núcleo offline e round-trip mensurável"
authors = [
    { name = "Leonardo Marques de Souza", email = "leonardo.marques.souza@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["pdf", "markdown", "pdf-to-markdown", "ocr", "latex", "document-conversion", "cli", "round-trip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

# Deps base do CLI. Marker/pandoc/Chrome são checados em runtime via `pdf2md doctor`,
# não declarados aqui (cada um vive no seu venv ou no PATH, sem conflito pillow<11).
dependencies = [
    "typer>=0.12",
    "pymupdf>=1.24",
    "pillow>=10",
    "psutil>=5.9",
]

[project.optional-dependencies]
# Extras pip REAIS (pure-pip, sem conflito pillow/torch). marker/pix2tex/ollama NÃO
# entram aqui — são capabilities EXTERNAS (venv/binário/server), checadas por
# `pdf2md doctor`. Ver tickets/closed/T090 + docs. (publish-prep marco B)
rtpixel = ["numpy>=1.26", "scipy>=1.14", "scikit-image>=0.22"]   # validador visual L0.5 (SSIM/align)
ocr = ["pytesseract>=0.3"]                                        # wrapper; engine tesseract é externo (doctor)
all = ["pdftomd[rtpixel,ocr]"]                                   # tudo que é pip-puro seguro (auto-ref: nome de distribuição)

[project.scripts]
pdf2md = "pdf2md.cli:app"

[project.urls]
Homepage = "https://github.com/LeoPR/pdf2md"
Repository = "https://github.com/LeoPR/pdf2md"
Issues = "https://github.com/LeoPR/pdf2md/issues"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdf2md*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pip>=26.1.1",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
    "pytest>=8",
]
